# SEAL

./: .env.example  .gitignore  README.md  context.py  ivan.py  pyproject.toml  seal.py
analysis/: README.md  angle.R  functions.py  main_results.ipynb  rewriting.ipynb  robustness_checks.ipynb
compare/: __init__.py
rewrite/: __init__.py
taxonomy/: __init__.py  create_batch.py  process_batch.py  run_control_batch.py
